--- a/index.html
+++ b/index.html
@@ -37,29 +37,6 @@
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
 
-    <!-- <style>
-      /*
-      misc styles, nothing to do with CSS variables
-    */
-
-      body {
-        text-align: center;
-        background: #193549;
-        color: white;
-        font-family: "helvetica neue", sans-serif;
-        font-weight: 100;
-        font-size: 50px;
-      }
-
-      .controls {
-        margin-bottom: 50px;
-      }
-
-      input {
-        width: 100px;
-      }
-    </style> -->
-
-    <script></script>
+    <script src="./index.js"></script>
   </body>
 </html>
